Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Davidwillw.GitHub.io by DavidWillW</title>
+    <title>Ayvytr.GitHub.io by Ayvytr</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Davidwillw.GitHub.io</h1>
+        <h1>Ayvytr.GitHub.io</h1>
         <h2>for better, forever</h2>
-        <a href="https://github.com/DavidWillW" class="button"><small>Follow me on</small> GitHub</a>
+        <a href="https://github.com/Ayvytr" class="button"><small>Follow me on</small> GitHub</a>
       </div>
     </header>
 
